# advent-of-code

./: .editorconfig  .gitmodules  .pre-commit-config.yaml  Cargo.toml  README.md  lint-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: main.yml
aoc_macros/: Cargo.toml
aoc_macros/src/: lib.rs
data/2020/example/: 18.txt
src/: aoc.rs  integration_tests.rs  lib.rs  main.rs  symbols.rs
src/aoc/: __main__.py  day1.py  day2.py  day3.py  day4.py  day5.py  utils.py
src/aoc/y1970/: day1.rs  day2.rs
src/aoc/y2015/: day00.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day14.rs  mod.rs
src/aoc/y2018/: day00.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day11.rs  day6.py  day7.py  day8.py  mod.rs
src/aoc/y2019/: computer.rs  day00.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day11.rs  day12.rs  day13.rs  day17.rs  day19.rs  day21.rs  day23.rs  day25.rs  mod.rs
src/aoc/y2020/: day00.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day1.py  day10.py  day10.rs  day11.py  day12.py  day13.py  day14.py  day15.py  day18.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  mod.rs
src/aoc/y2021/: day00.rs  day1.py  (+21 more)
src/utils/: astar.rs  bigcoord2d.rs  bigcoord3d.rs  commongrid.rs  coord.rs  coord2d.rs  coord3d.rs  data.rs  direction.rs  error.rs  grid.rs  gridstate.rs  infgrid.rs  input_partitioner.rs  sparsegrid.rs
(+97 files in other folders)
