[package]
name = "advent-of-code"
authors = [
    "Lexi Robinson <lexi@lexi.org.uk>"
]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.0.29", features = ["cargo"] }
inventory = "0.3.2"
itertools = "0.10.5"
lazy_static = "1.4.0"
regex = "1.7.0"
serde = "1.0.152"
serde_json = "1.0.91"
