[package]
name = "advent-of-code"
authors = ["Lexi Robinson <lexi@lexi.org.uk>"]
version = "0.1.0"
edition = "2021"
license = "EUPL-1.2"
default-run = "advent-of-code"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.0.29", features = ["cargo", "derive", "env"] }
hex = "0.4.3"
humantime = "2.1.0"
inventory = "0.3.2"
itertools = "0.14.0"
lazy_static = "1.4.0"
md-5 = "0.10.6"
num = "0.4.1"
regex = "1.7.0"
reqwest = { version = "0.12.19", features = ["blocking"] }
ron = "0.10.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
termion = "4.0.5"
text_io = "0.1.12"
